# Rainbowcore

./: .env.example  .gitignore  Cargo.toml  L0_DEV_CHECKLIST.md
bridge/: Cargo.toml
bridge/src/: backfill.rs  canonicalization.rs  consequence_guard.rs  cross_node_sync.rs  error.rs  evidence_level.rs  l0_client.rs  lib.rs  payload_map_commit.rs  three_phase_sync.rs
l0-api/: Cargo.toml
l0-api/src/: dto.rs  error.rs  lib.rs  server.rs  state.rs
l0-api/src/routes/: actor.rs  anchor.rs  backfill.rs  commitment.rs  consent.rs  dispute.rs  health.rs  knowledge.rs  mod.rs  receipt.rs
l0-api/tests/: integration_tests.rs
l0-cli/: Cargo.toml
l0-cli/src/: batch.rs  commands.rs  interactive.rs  main.rs  sanitize.rs
l0-core/: Cargo.toml
l0-core/src/: constants.rs  epoch_proof.rs  error.rs  lib.rs  logging.rs  version.rs
l0-core/src/canon/: l0_canon.rs  mod.rs
l0-core/src/crypto/: merkle.rs  mod.rs
l0-core/src/ledger/: anchor.rs  backfill.rs  causality.rs  consent.rs  dispute.rs  identity.rs  knowledge.rs  mod.rs  receipt.rs
l0-core/src/types/: access_ticket.rs  actor.rs  anchor.rs  backfill.rs  civilization_tax.rs  common.rs  consent.rs  decrypt_audit.rs  degraded_mode.rs  dispute.rs  error_codes.rs  guardian_consent.rs  mod.rs  observer_report.rs  receipt.rs  signer_management.rs  snapshot.rs  version.rs
l0-db/: Cargo.toml
l0-db/src/: error.rs  lib.rs  schema.rs  sequence.rs  validation.rs
l0-db/src/entities/: actor.rs  anchor.rs  backfill.rs  commitment.rs  consent.rs  dispute.rs  knowledge.rs  mod.rs  receipt.rs
l0-db/src/repos/: actor.rs  actor_repo.rs  commitment.rs  commitment_repo.rs  mod.rs  receipt.rs  receipt_repo.rs
l0-db/src/services/: access_ticket_service.rs  anchor_service.rs  backfill_service.rs  causality_service.rs  civilization_tax_service.rs  consent_service.rs  decrypt_audit_service.rs  degraded_mode_service.rs  dispute_service.rs  guardian_consent_service.rs  identity_service.rs  knowledge_service.rs  mod.rs  observer_report_service.rs  p4_integration.rs  receipt_service.rs  signer_set_service.rs  tipwitness_service.rs
l0-network/: Cargo.toml
l0-network/src/: error.rs  lib.rs  message.rs  node.rs  router.rs  signing.rs  transport.rs
l0-p4/: Cargo.toml
l0-p4/src/: atomicals.rs  bitcoin.rs  config.rs  error.rs  lib.rs  metrics.rs  monitor.rs  retry.rs  tx_builder.rs
l0-p4/src/cap/: accounting.rs  manager.rs  mod.rs
l0-p4/src/degradation/: mod.rs  recovery.rs  signals.rs
l0-p4/src/integration/: l0.rs  mod.rs  p3.rs
l0-p4/src/ops/: confirm.rs  idempotency.rs  link.rs  mod.rs  quote.rs  reconcile.rs  submit.rs
l0-p4/src/policy/: manager.rs  mod.rs  version.rs
l0-p4/src/pool/: mod.rs
l0-p4/src/service/: builder.rs  mod.rs  runner.rs
l0-p4/src/storage/: memory.rs  mod.rs  sled.rs
l0-p4/src/types/: common.rs  input.rs  job.rs  link.rs  mod.rs  reconcile.rs
l0-p4/src/verify/: fake_endorsement.rs  merkle.rs  mod.rs
l0-signer/: Cargo.toml
l0-signer/benches/: signing_benchmarks.rs
l0-signer/src/: bls.rs  crypto.rs  dkg.rs  error.rs  integrity.rs  lib.rs  session.rs  signer.rs  signer_set.rs
p2-api/: Cargo.toml
p2-api/src/: dto.rs  error.rs  lib.rs  openapi.rs  router.rs  state.rs
p2-api/src/handlers/: audit.rs  evidence.rs  health.rs  mod.rs  payload.rs  rtbf.rs  sampling.rs  snapshot.rs  sync.rs  ticket.rs
p2-api/src/middleware/: auth.rs  mod.rs  node_admission.rs  rate_limit.rs  rbac.rs  ticket.rs
p2-api/src/services/: dsn_health.rs  mod.rs  r0_trigger.rs
p2-core/: Cargo.toml
p2-core/src/: degraded_mode.rs  error.rs  hard_invariants_tests.rs  lib.rs  node_admission.rs  rtbf.rs  sampling_audit.rs  verification.rs
p2-core/src/crypto/: envelope.rs  kdf.rs  key_rotation.rs  key_store.rs  mod.rs
p2-core/src/ledger/: audit_ledger.rs  encrypted_storage.rs  evidence_ledger.rs  index.rs  mod.rs  snapshot_ledger.rs  sync_ledger.rs  ticket_ledger.rs  traits.rs  wal.rs
p2-core/src/types/: access_ticket.rs  audit_artifacts.rs  evidence_bundle.rs  mod.rs  payload_map.rs  resurrection.rs  sealed_payload.rs  selector.rs
p2-storage/: Cargo.toml
p2-storage/src/: backend_migration.rs  error.rs  failover.rs  health_monitor.rs  lib.rs  router.rs  routing_policy.rs
p2-storage/src/backend/: ipfs.rs  ipfs_cluster.rs  ipfs_pin.rs  local.rs  mod.rs  s3.rs  s3_lifecycle.rs  s3_replication.rs  traits.rs
p2-storage/src/compliance/: audit.rs  checker.rs  mod.rs  policy.rs  rules.rs
p2-storage/src/invariants/: append_only.rs  audit_logger.rs  ciphertext_validator.rs  deletion_guard.rs  mod.rs
p2-storage/src/ops/: diagnostics.rs  health.rs  management.rs  mod.rs  stats.rs
p2-storage/src/performance/: mod.rs  testing.rs
p2-storage/src/replication/: async_repl.rs  config.rs  consistency.rs  manager.rs  mod.rs  sync.rs
p2-storage/src/retention/: checker.rs  gc.rs  legal_hold.rs  mod.rs  policy.rs
p2-storage/src/services/: alerting.rs  audit_store.rs  integrity_check.rs  mod.rs  sampler.rs  sampling.rs  sampling_report.rs
p2-storage/src/telemetry/: logging.rs  metrics.rs  mod.rs  tracing_config.rs
p2-storage/src/temperature/: executor.rs  mod.rs  policy.rs
p3-api/: Cargo.toml
p3-api/src/: auth.rs  dto.rs  error.rs  gateway.rs  handlers.rs  lib.rs  metrics.rs  routes.rs  state.rs
p3-cli/: Cargo.toml
p3-cli/src/: client.rs  error.rs  handler.rs  lib.rs  main.rs  output.rs
p3-cli/src/commands/: config.rs  execute.rs  mod.rs  query.rs  verify.rs
p3-conformance/: Cargo.toml
p3-conformance/src/: lib.rs
p3-conformance/src/conformance/: digest.rs  execution.rs  mod.rs  verification.rs
p3-conformance/src/vectors/: digest.rs  disclosure.rs  epoch.rs  execution.rs  mod.rs  (+1 more)
p3-core/: Cargo.toml
p3-core/src/: error.rs  lib.rs
p3-executor/: Cargo.toml
p3-executor/src/: anchor.rs  attempt.rs  error.rs  executor.rs  lib.rs  proof.rs
p3-store/: Cargo.toml
p3-store/src/: error.rs  lib.rs  schema.rs
p3-verifier/: Cargo.toml
p3-verifier/src/: error.rs  lib.rs  verify_bundle.rs  verify_fee_split.rs  verify_gates.rs  verify_idempotency.rs  verify_manifest.rs  verify_proof.rs  verify_root.rs
(+69 files in other folders)
