[workspace]
resolver = "2"
members = [
    # L0 - Public Reality Ledger
    "l0-core",
    "l0-db",
    "l0-network",
    "l0-signer",
    "l0-p4",
    "l0-api",
    "l0-cli",
    # P2/DSN - Encrypted Permanence Domain
    "p2-core",
    "p2-storage",
    "bridge",
    "p2-api",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Rainbow City Foundation"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rainbowcity/rainbowcore"
description = "RainbowCore - L0 Public Reality Ledger & P2/DSN Encrypted Permanence Domain"

[workspace.dependencies]
# ============================================
# Soul-Base 基础设施 (复用，不重复造轮子)
# ============================================
soulbase-types = { path = "../soul-base/crates/soulbase-types" }
soulbase-errors = { path = "../soul-base/crates/soulbase-errors" }
soulbase-crypto = { path = "../soul-base/crates/soulbase-crypto" }
soulbase-storage = { path = "../soul-base/crates/soulbase-storage" }
soulbase-tx = { path = "../soul-base/crates/soulbase-tx" }
soulbase-cache = { path = "../soul-base/crates/soulbase-cache" }
soulbase-net = { path = "../soul-base/crates/soulbase-net" }
soulbase-observe = { path = "../soul-base/crates/soulbase-observe" }
soulbase-auth = { path = "../soul-base/crates/soulbase-auth" }
soulbase-config = { path = "../soul-base/crates/soulbase-config" }

# ============================================
# Async runtime
# ============================================
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# ============================================
# Serialization
# ============================================
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ============================================
# Time
# ============================================
chrono = { version = "0.4", features = ["serde"] }

# ============================================
# Error handling
# ============================================
thiserror = "1.0"
anyhow = "1.0"

# ============================================
# Logging
# ============================================
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ============================================
# HTTP/API
# ============================================
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# ============================================
# gRPC
# ============================================
tonic = "0.10"
prost = "0.12"

# ============================================
# CLI
# ============================================
clap = { version = "4.4", features = ["derive", "env"] }

# ============================================
# Testing
# ============================================
proptest = "1.4"

# ============================================
# Benchmarking
# ============================================
criterion = { version = "0.5", features = ["html_reports"] }

# ============================================
# Crypto and encoding
# ============================================
hex = "0.4"
sha2 = "0.10"
base64 = "0.21"

# ============================================
# HTTP client
# ============================================
reqwest = { version = "0.11", features = ["json"] }

# ============================================
# Retry and backoff
# ============================================
backoff = { version = "0.4", features = ["tokio"] }
