[package]
name = "bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "P1-P2 Bridge Layer - Mapping commitments and three-phase sync"

[dependencies]
# L0 and P2 core types
l0-core = { path = "../l0-core" }
p2-core = { path = "../p2-core" }
p2-storage = { path = "../p2-storage" }

# Soulbase infrastructure
soulbase-crypto = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# HTTP client for L0 API
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

[features]
default = []
# Enable direct L0 database access (for same-process integration)
direct-l0 = []

[dev-dependencies]
tempfile = "3.10"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
