[package]
name = "l0-p4"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "L0 P4 Layer - Blockchain Anchoring for Bitcoin and Atomicals"

[dependencies]
# Workspace dependencies
l0-core = { path = "../l0-core" }
p3-core = { path = "../p3-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
backoff = { workspace = true }
rust_decimal = { workspace = true }

# Bitcoin-specific dependencies (not in workspace)
bitcoin = { version = "0.32", features = ["serde"] }
secp256k1 = { version = "0.29", features = ["serde", "rand"] }

# Storage backend
sled = "0.34"

# CBOR encoding for Atomicals protocol
ciborium = "0.2"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
tempfile = "3.10"
