[package]
name = "l0-signer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "L0 Threshold signing service"

[features]
default = []
full-crypto = ["l0-core/full-crypto"]

[dependencies]
l0-core = { path = "../l0-core" }
l0-network = { path = "../l0-network" }

# Soul-Base 基础设施
soulbase-crypto = { workspace = true }

# Cryptography (Ed25519 for threshold signing)
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }

# BLS12-381 for threshold signatures
blst = "0.3"

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }

# Time
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Utilities
hex = "0.4"
sha2 = "0.10"

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "signing_benchmarks"
harness = false
