[package]
name = "p2-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "P2/DSN Core Types - Encrypted Permanence Domain"

[dependencies]
# L0 core types
l0-core = { path = "../l0-core" }

# Soulbase infrastructure
soulbase-crypto = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Async
async-trait = { workspace = true }
tokio = { workspace = true }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Encoding
hex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
