[package]
name = "p2-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "P2/DSN Core Types - Encrypted Permanence Domain"

[dependencies]
# L0 core types
l0-core = { path = "../l0-core" }

# Soulbase infrastructure
soulbase-crypto = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Async
async-trait = { workspace = true }
tokio = { workspace = true }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Encoding
hex = { workspace = true }

# Hashing
sha2 = { workspace = true }

# Random number generation
getrandom = "0.2"
rand = "0.8"

# Logging
tracing = "0.1"

# Zeroize secrets
zeroize = "1"

# HTTP client for Vault integration
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false, optional = true }

# Base64 encoding for Vault responses
base64 = "0.21"

[features]
default = []
vault = ["reqwest"]

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3.10"
