[package]
name = "p2-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "P2/DSN Storage Layer - Backend implementations for encrypted permanence"

[features]
default = ["local"]
local = []
ipfs = []
s3 = []

[dependencies]
# P2 core types
p2-core = { path = "../p2-core" }
l0-core = { path = "../l0-core" }

# Soulbase infrastructure
soulbase-crypto = { workspace = true }

# Async
tokio = { workspace = true, features = ["fs", "io-util", "time", "sync"] }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Hex encoding
hex = { workspace = true }

# Hashing
sha2 = { workspace = true }

# Random number generation
rand = "0.8"

# System info
hostname = "0.4"
num_cpus = "1.16"

# Regex for policy matching
regex = "1.10"

# Futures/streams for async operations
futures = "0.3"

# HTTP client for IPFS API
reqwest = { version = "0.11", features = ["json", "multipart"] }

# URL encoding
urlencoding = "2.1"

# Configuration file formats
toml = "0.8"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3.10"
